# LibAFL-BDCore-Fuzzer

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md
src/: aspack.rs  bitdefender.rs  client.rs  fuzzer.rs  harness.rs  instance.rs  main.rs  mod.rs  mutator.rs  options.rs  scan_profile.rs  utils.rs
src/bitdefender/: mod.rs
src/harness/: beria_vm.rs  ceva_emu.rs  ceva_target.rs  cevakrnl.rs  cevakrnl_target.rs  decode_execute_cold_path.rs  mod.rs  morphinep.rs  pec3_unpack.rs  petite_unpack.rs  standard.rs  translate_node_link.rs
src/harness/ceva_emu/: decode_execute_cold_path.rs  mod.rs  translate_node_link.rs
src/harness/unpackers/: aspack.rs  beria.rs  health.rs  mod.rs  morphinep.rs  pec3.rs  pelock.rs  petite.rs  stream.rs
src/mutators/: beria.rs  havoc.rs  helpers.rs  mod.rs  morphine.rs  pe_mutator.rs
